--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,6 @@ repos:
     rev:  v0.1.10
     hooks:
       - id: terraform-fmt
-        exclude: ^engine/
+        exclude: ^proto/
       - id: goimports
-        exclude: ^engine/
+        exclude: ^proto/
