--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ env: &env
 machine:
   enabled: true
   image: ubuntu-2004:2022.10.1
+  docker:
+  - image: 087285199408.dkr.ecr.us-east-1.amazonaws.com/circle-ci-test-image-base:go1.21.9-tf1.5-tg39.1-pck1.8-ci54.0
   <<: *env
 
 defaults: &defaults
@@ -117,58 +119,57 @@ jobs:
           path: example/client-server/client/bin
       - store_artifacts:
           path: example/client-server/server/bin
-  release:
-    <<: *defaults
-    macos:
-      xcode: 15.3.0
-    resource_class: macos.m1.medium.gen1
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - go/install:
-          version: "1.21.1"
-      - run:
-          <<: *install_gruntwork_utils
-      - run:
-          name: Compile and sign the binaries
-          command: |
-            export AC_PASSWORD=${MACOS_AC_PASSWORD}
-            export AC_PROVIDER=${MACOS_AC_PROVIDER}
-
-            sign-binary --os mac --install-macos-sign-dependencies .gon_amd64.hcl
-            sign-binary --os mac .gon_arm64.hcl
-            echo "Done signing the binary"
-            mkdir -p bin
-            
-            # Replace the files in bin. These are the same file names generated from .gon_amd64.hcl and .gon_arm64.hcl
-            unzip terragrunt-iac-engine-opentofu_amd64.zip
-            mv terragrunt-iac-engine-opentofu_darwin_amd64 bin/
-
-            unzip terragrunt-iac-engine-opentofu_arm64.zip
-            mv terragrunt-iac-engine-opentofu_darwin_arm64 bin/
-      - run:
-          name: Install required packages
-          command: |
-            brew install coreutils gpg gh
-            # setting sign key
-            echo "${GW_ENGINE_GPG_KEY}" | base64 --decode > privatekey.asc
-            echo "${GW_ENGINE_GPG_KEY_PW}" | gpg --batch --yes --import privatekey.asc
-            KEY_ID=$(gpg --list-keys --with-colons | awk -F: '/^pub/{print $5}')
-            echo -e "trust\n5\ny\n" | gpg --command-fd 0 --edit-key $KEY_ID trust
-            mkdir -p ~/.gnupg
-            echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
-      - run:
-          name: Package release files
-          command: |
-            export TAG="${CIRCLE_TAG}"
-            ./.circleci/sign-files.sh
-            ./.circleci/create-release.sh
-      - persist_to_workspace:
-          root: .
-          paths: [release]
-      - store_artifacts:
-          path: release
+#  release:
+#    macos:
+#      xcode: 15.3.0
+#    resource_class: macos.m1.medium.gen1
+#    steps:
+#      - checkout
+#      - attach_workspace:
+#          at: .
+#      - go/install:
+#          version: "1.21.1"
+#      - run:
+#          <<: *install_gruntwork_utils
+#      - run:
+#          name: Compile and sign the binaries
+#          command: |
+#            export AC_PASSWORD=${MACOS_AC_PASSWORD}
+#            export AC_PROVIDER=${MACOS_AC_PROVIDER}
+#
+#            sign-binary --os mac --install-macos-sign-dependencies .gon_amd64.hcl
+#            sign-binary --os mac .gon_arm64.hcl
+#            echo "Done signing the binary"
+#            mkdir -p bin
+#
+#            # Replace the files in bin. These are the same file names generated from .gon_amd64.hcl and .gon_arm64.hcl
+#            unzip terragrunt-iac-engine-opentofu_amd64.zip
+#            mv terragrunt-iac-engine-opentofu_darwin_amd64 bin/
+#
+#            unzip terragrunt-iac-engine-opentofu_arm64.zip
+#            mv terragrunt-iac-engine-opentofu_darwin_arm64 bin/
+#      - run:
+#          name: Install required packages
+#          command: |
+#            brew install coreutils gpg gh
+#            # setting sign key
+#            echo "${GW_ENGINE_GPG_KEY}" | base64 --decode > privatekey.asc
+#            echo "${GW_ENGINE_GPG_KEY_PW}" | gpg --batch --yes --import privatekey.asc
+#            KEY_ID=$(gpg --list-keys --with-colons | awk -F: '/^pub/{print $5}')
+#            echo -e "trust\n5\ny\n" | gpg --command-fd 0 --edit-key $KEY_ID trust
+#            mkdir -p ~/.gnupg
+#            echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
+#      - run:
+#          name: Package release files
+#          command: |
+#            export TAG="${CIRCLE_TAG}"
+#            ./.circleci/sign-files.sh
+#            ./.circleci/create-release.sh
+#      - persist_to_workspace:
+#          root: .
+#          paths: [release]
+#      - store_artifacts:
+#          path: release
 #----------------------------------------------------------------------------------------------------------------------
 # WORKFLOWS
 #----------------------------------------------------------------------------------------------------------------------
@@ -198,9 +199,9 @@ workflows:
       - build:
           requires:
             - precommit
-      - release:
-          requires:
-            - build
+#      - release:
+#          requires:
+#            - build
           #          filters:
 #            tags:
 #              only: /^.*-rc.*$/
