--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,9 +120,12 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
-
       - run:
-          <<: *install_gruntwork_utils
+          name: Install gruntwork utils
+          command: |
+            curl -Ls https://raw.githubusercontent.com/gruntwork-io/gruntwork-installer/master/bootstrap-gruntwork-installer.sh | bash /dev/stdin --version "${GRUNTWORK_INSTALLER_VERSION}"
+            gruntwork-install --module-name "gruntwork-module-circleci-helpers" --repo "https://github.com/gruntwork-io/terraform-aws-ci" --tag "${MODULE_CI_VERSION}"
+            gruntwork-install --module-name "sign-binary-helpers" --repo "https://github.com/gruntwork-io/terraform-aws-ci" --tag "${MODULE_CI_VERSION}"
       - run:
           name: Compile and sign the binaries
           command: |
