--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,6 +166,8 @@ jobs:
       - run:
           name: Package release files
           command: |
+            export BIN=$(pwd)/bin-client
+            export NAME="client"
             export TAG="${CIRCLE_TAG}"
             ./.circleci/sign-files.sh
             ./.circleci/create-release.sh
