--- a/example/client-server/Dockerfile
+++ b/example/client-server/Dockerfile
@@ -2,6 +2,8 @@ FROM gruntwork/terragrunt:0.2.0
 
 ENV LISTEN_ADDRESS=0.0.0.0:50051
 
+RUN apt-get update && apt-get install -y wget
+
 RUN mise use --global -y opentofu@1.7.0
 RUN ln -s /root/.local/share/mise/installs/opentofu/1.7.0/bin/tofu /bin/tofu
 RUN mkdir /app
