--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,11 +214,11 @@ workflows:
       - release:
           requires:
             - build
-          #          filters:
-#            tags:
-#              only: /^.*-rc.*$/
-#            branches:
-#              ignore: /.*/
+          filters:
+            tags:
+              only: /^.*-rc.*$/
+            branches:
+              ignore: /.*/
           context:
             - AWS__PHXDEVOPS__circle-ci-test
             - GCP__automated-tests
