--- a/example/client-server/Dockerfile
+++ b/example/client-server/Dockerfile
@@ -1,5 +1,7 @@
 FROM gruntwork/terragrunt:0.2.0
 
+ARG VERSION=v0.0.3-rc2024081902
+ARG PLATFORM=linux_amd64
 ENV LISTEN_ADDRESS=0.0.0.0:50051
 
 RUN apt-get update && apt-get install -y wget
@@ -7,6 +9,6 @@ RUN apt-get update && apt-get install -y wget
 RUN mise use --global -y opentofu@1.7.0
 RUN ln -s /root/.local/share/mise/installs/opentofu/1.7.0/bin/tofu /bin/tofu
 RUN mkdir /app
-ADD server/terragrunt-engine-server /app/terragrunt-engine-server
-
+RUN wget https://github.com/gruntwork-io/terragrunt-engine-go/releases/download/${VERSION}/terragrunt-iac-engine-server_${PLATFORM} -O /app/terragrunt-engine-server
+RUN chmod +x /app/terragrunt-engine-server
 ENTRYPOINT ["/app/terragrunt-engine-server"]
