client server update

--- a/example/client-server/docker-compose.yaml
+++ b/example/client-server/docker-compose.yaml
@@ -9,6 +9,6 @@ services:
       TOKEN: secret-token
     volumes:
       # Update path to allow tofu access from container to working directory
-      - $PWD:$PWD
+      - /projects:/projects
     ports:
-      - "0.0.0.0:50051:50051"
+      - "127.0.0.1:50051:50051"
