--- a/example/client-server/Makefile
+++ b/example/client-server/Makefile
@@ -9,7 +9,7 @@ protoc: $(shell find ./example/client-server -name '*.proto')
 	protoc --go_out=. --go_opt=paths=source_relative proto/proto.proto
 	protoc --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/proto.proto
 
-build: protoc
+build: 
 	set -xe ;\
 	cd client ;\
 	go build -o terragrunt-engine-client -ldflags "-extldflags '-static'" . ;\
