--- a/examples/client-server/Dockerfile
+++ b/examples/client-server/Dockerfile
@@ -1,11 +1,19 @@
-FROM ubuntu:20.04 as downloader
+FROM golang:1.21.13-bullseye as builder
 
-ARG VERSION=v0.0.3-rc2024081902
-ARG PLATFORM=linux_amd64
+ARG ENGINE_VERSION=v0.0.3-rc2024081902
 
-RUN apt-get update && apt-get install -y wget
-RUN wget https://github.com/gruntwork-io/terragrunt-engine-go/releases/download/${VERSION}/terragrunt-iac-engine-server_${PLATFORM} -O /tmp/terragrunt-engine-server
-RUN chmod +x /tmp/terragrunt-engine-server
+
+
+# clone base engine repo
+WORKDIR src
+RUN git clone https://github.com/gruntwork-io/terragrunt-engine-go.git -b ${ENGINE_VERSION} .
+# add examples from working directory
+RUN rm -rf ./examples/*
+COPY . ./examples/client-server
+
+# build engine
+WORKDIR examples/client-server
+RUN make
 
 FROM gruntwork/terragrunt:0.2.0
 
@@ -14,7 +22,7 @@ ENV LISTEN_ADDRESS=0.0.0.0:50051
 RUN mise use --global -y opentofu@1.7.0
 RUN ln -s /root/.local/share/mise/installs/opentofu/1.7.0/bin/tofu /bin/tofu
 
-COPY --from=downloader /tmp/terragrunt-engine-server /opt/terragrunt-engine-server
+COPY --from=builder /go/src/examples/client-server/terragrunt-engine-server /opt/terragrunt-engine-server
 
 RUN mkdir /app
 WORKDIR /app
