--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,21 +1,70 @@
+# This file is generated using `make update-local-lint` to track the linting used in Terragrunt. Do not edit manually.
 version: "2"
 run:
-  go: "1.24"
+  go: "1.25"
   issues-exit-code: 1
   tests: true
+output:
+  formats:
+    text:
+      path: stdout
+      print-linter-name: true
+      print-issued-lines: true
 linters:
   enable:
+    - asasalint
+    - asciicheck
+    - bidichk
+    - bodyclose
+    - contextcheck
     - dupl
+    - durationcheck
+    - errchkjson
+    - errorlint
+    - exhaustive
+    - fatcontext
+    - gocheckcompilerdirectives
+    - gochecksumtype
     - goconst
     - gocritic
+    - gosmopolitan
+    - loggercheck
+    - makezero
     - misspell
     - mnd
+    - musttag
+    - nilerr
+    - nilnesserr
+    - noctx
+    - paralleltest
+    - perfsprint
+    - prealloc
+    - protogetter
+    - reassign
+    - rowserrcheck
+    - spancheck
+    - sqlclosecheck
+    - staticcheck
+    - testableexamples
+    - testifylint
+    - testpackage
+    - thelper
+    - tparallel
     - unconvert
     - unparam
+    - usetesting
+    - wastedassign
+    - wsl_v5
+    - zerologlint
   disable:
     - depguard
+    - exhaustruct
     - gocyclo
     - gosec
+    - nolintlint
+    - recvcheck
+    - varnamelen
+    - wrapcheck
   settings:
     dupl:
       threshold: 120
@@ -41,15 +90,39 @@ linters:
         - performance
       disabled-tags:
         - experimental
+    govet:
+      enable:
+        - fieldalignment
     nakedret:
       max-func-lines: 20
     staticcheck:
       checks:
         - all
         - -SA9005
+        - -QF1008
+        - -ST1001
+    unparam:
+      check-exported: false
+    wsl_v5:
+      allow-whole-block: false
+      branch-max-lines: 2
   exclusions:
     generated: lax
+    rules:
+      - linters:
+          - dupl
+          - errcheck
+          - gocyclo
+          - lll
+          - mnd
+          - unparam
+          - wsl
+        path: _test\.go
     paths:
+      - docs
+      - _ci
+      - .github
+      - .circleci
       - third_party$
       - builtin$
       - examples$
@@ -62,11 +135,13 @@ formatters:
   settings:
     gofmt:
       simplify: true
-    gofumpt:
-      extra-rules: false
   exclusions:
     generated: lax
     paths:
+      - docs
+      - _ci
+      - .github
+      - .circleci
       - third_party$
       - builtin$
       - examples$
