fix: Adding testing logic for `oneof` behavior

--- a/examples/client-server/Makefile
+++ b/examples/client-server/Makefile
@@ -18,7 +18,7 @@ build:
 	go build -o ../terragrunt-engine-server -ldflags "-extldflags '-static'" .
 
 docker:
-	docker build -t terragrunt-engine-server .
+	cd ../.. && docker build -f examples/client-server/Dockerfile -t terragrunt-engine-server .
 
 pre-commit:
 	pre-commit run --all-files
