--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
   - repo: https://github.com/gruntwork-io/pre-commit
-    rev:  v0.1.10
+    rev:  v0.1.30
     hooks:
-      - id: terraform-fmt
+      - id: tofu-fmt
         exclude: ^proto/
       - id: goimports
         exclude: ^proto/
